--- a/src/patternfly/components/ModalBox/modal-box-header.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-header.hbs
@@ -1,6 +1,11 @@
-<header class="{{pfv}}modal-box__header{{#if modal-box-header--modifier}} {{modal-box-header--modifier}}{{/if}}"
+<header class="{{pfv}}modal-box__header{{#if modal-box-header--modifier}} {{modal-box-header--modifier}}{{/if}}{{#if modal-box-header--HasHelp}} pf-m-help{{/if}}"
   {{#if modal-box-header--attribute}}
     {{{modal-box-header--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#> modal-box-header-main}}
+    {{> @partial-block}}
+  {{/modal-box-header-main}}
+    {{#if modal-box-header--HasHelp}}
+    {{> modal-box-header-help}}
+{{/if}}
 </header>
