--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -135,35 +135,26 @@
     flex-grow: 1;
   }
 
-  // stylelint-disable max-nesting-depth
   .#{$menu} {
     --#{$menu}--MinWidth: 100%;
 
-    &.pf-m-drilldown {
+    &.pf-m-drilldown,
+    &.pf-m-drilldown .#{$menu} {
       --#{$menu}--PaddingBlockStart: 0;
       --#{$menu}--PaddingBlockEnd: 0;
       --#{$menu}--BackgroundColor: var(--#{$nav}--BackgroundColor);
       --#{$menu}--BoxShadow: none;
-      --#{$menu}__list-item--Color: var(--#{$nav}__link--Color);
-      --#{$menu}__list-item--BackgroundColor: transparent;
-      --#{$menu}__list-item--hover--BackgroundColor: transparent;
-      --#{$menu}__item--BackgroundColor: var(--#{$nav}__link--BackgroundColor);
+      --#{$menu}__list-item--hover--BackgroundColor: var(--pf-v6-c-nav__link--hover--BackgroundColor);
 
       .#{$menu}__list {
         row-gap: var(--#{$nav}__subnav--RowGap);
       }
     
-      .#{$menu}__item {
+      .#{$menu}__list-item::before {
         border-radius: var(--#{$nav}__link--BorderRadius);
-    
-        &:hover,
-        &:focus {
-          --#{$menu}__item--BackgroundColor: var(--#{$nav}__link--hover--BackgroundColor);
-        }
       }
     }
   }
-  // stylelint-enable max-nesting-depth
 }
 
 [class^="#{$nav}"][hidden] {
