fix(components): Review updates

--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -159,14 +159,10 @@
 
   .#{$button}.pf-m-inline {
     --#{$button}--m-link--Color: var(--#{$banner}--link--Color);
-    --#{$button}--m-link--m-inline--hover--Color: var(--#{$banner}--link--hover--Color);
+    --#{$button}--m-link--hover--Color: var(--#{$banner}--link--hover--Color);
     --#{$button}--disabled--Color: var(--#{$banner}--link--disabled--Color);
 
     text-decoration: var(--#{$banner}--link--TextDecoration);
-
-    &:hover {
-      --#{$banner}--link--Color: var(--#{$banner}--link--hover--Color);
-    }
 
     &:disabled,
     &.pf-m-disabled {
