feat(Table): add padding except for clickable expandable rows (#6958)

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -946,26 +946,26 @@
     transition: var(--#{$table}__expandable-row--Transition);
   }
 
-  // stylelint-disable
-  > td,
-  > th {
-    padding-block-start: 0;
+  @at-root :not(.#{$table}__control-row) ~ .#{$table}__expandable-row {
+    > .#{$table}__th, 
+    > .#{$table}__td {
+      padding-block-start: 0;
+    }
   }
 
   td:where(.#{$table}__td),
   th:where(.#{$table}__th) {
     &.pf-m-no-padding {
       padding-block-start: 0;
-      padding-inline-end: 0;
       padding-block-end: 0;
       padding-inline-start: 0;
+      padding-inline-end: 0;
 
       .#{$table}__expandable-row-content {
         padding: 0;
       }
     }
   }
-  // stylelint-enable
 
   // - Table expandable row content
   .#{$table}__expandable-row-content {
