--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -127,7 +127,8 @@
   // SELECTABLE CARDS
   &.pf-m-selectable {
     // disables the gap since these have an empty label
-    .#{$card}__selectable-actions :is(.#{$check}, .#{$radio}) {
+    .#{$card}__selectable-actions .#{$check},
+    .#{$card}__selectable-actions .#{$radio} {
       gap: 0;
     }
   }
@@ -153,7 +154,8 @@
   // stylelint-disable selector-max-class
   // Cards that are BOTH SELECTABLE AND CLICKABLE
   &.pf-m-selectable.pf-m-clickable {
-    .#{$card}__selectable-actions :is(.#{$check}__label, .#{$radio}__label) {
+    .#{$card}__selectable-actions .#{$check}__label,
+    .#{$card}__selectable-actions .#{$radio}__label {
       position: unset;
 
       &::before {
@@ -164,13 +166,15 @@
     }
 
     // When SELECTABLE and CLICKABLE card is focused, don't show change of background or border on the card
-    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:focus-visible) ~ :is(.#{$check}__label, .#{$radio}__label) {
+    .#{$card}__selectable-actions .#{$check}__input:focus-visible ~ .#{$check}__label,
+    .#{$card}__selectable-actions .#{$radio}__input:focus-visible ~ .#{$radio}__label {
       --#{$card}--BackgroundColor: revert;
       --#{$card}--BorderColor: revert;
     }
 
     // SELECTABLE and CLICKABLE card is selected (Check box checked or marked .pf-m-selected)
-    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:checked) ~ :is(.#{$check}__label, .#{$radio}__label),
+    .#{$card}__selectable-actions .#{$check}__input:checked ~ .#{$check}__label,
+    .#{$card}__selectable-actions .#{$radio}__input:checked ~ .#{$radio}__label,
     &.pf-m-selected {
       --#{$card}--BorderColor: revert;
       --#{$card}--m-selectable--BorderWidth: revert;
@@ -183,7 +187,8 @@
     }
 
     // SELECTABLE and CLICKABLE but DISABLED card
-    .#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:disabled) ~ :is(.#{$check}__label, .#{$radio}__label),
+    .#{$card}__selectable-actions .#{$check}__input:disabled ~ .#{$check}__label,
+    .#{$card}__selectable-actions .#{$radio}__input:disabled ~ .#{$radio}__label,
     &.pf-m-disabled {
       --#{$card}--BackgroundColor: var(--#{$card}--m-selectable--m-disabled--BackgroundColor);
     }
@@ -317,7 +322,9 @@
 }
 
 // Labels are used to handle states of selectable and clickable cards
-.#{$card}__selectable-actions :is(.#{$check}__label, .#{$radio}__label, .#{$card}__clickable-action) {
+.#{$card}__selectable-actions .#{$check}__label,
+.#{$card}__selectable-actions .#{$radio}__label,
+.#{$card}__selectable-actions .#{$card}__clickable-action {
   position: absolute;
   inset: 0;
   justify-self: auto;
@@ -339,27 +346,31 @@
 }
 
 // Selected card (checked)
-.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:checked) ~ :is(.#{$radio}__label, .#{$check}__label),
+.#{$card}__selectable-actions .#{$check}__input:checked ~ .#{$radio}__label,
+.#{$card}__selectable-actions .#{$radio}__input:checked ~ .#{$check}__label,
 .#{$card}.pf-m-selected {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--m-selected--BorderColor);
   --#{$card}--m-selectable--BorderWidth: var(--#{$card}--m-selectable--m-selected--BorderWidth); // this line used to be just BorderWidth, not m-selectable
 }
 
 // Focus on the card (focus on label but not checked)
-.#{$card}__selectable-actions .#{$card}__clickable-action:where(:focus-visible),
-.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input, .#{$card}__clickable-action):where(:focus-visible) ~ :is(.#{$check}__label, .#{$radio}__label) {
+.#{$card}__selectable-actions .#{$card}__clickable-action:focus-visible,
+.#{$card}__selectable-actions .#{$check}__input:focus-visible ~ .#{$check}__label,
+.#{$card}__selectable-actions .#{$radio}__input:focus-visible ~ .#{$radio}__label {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--focus--BorderColor);
   --#{$card}--BorderWidth: var(--#{$card}--m-selectable--focus--BorderWidth);
 }
 
 // Focus on a selected card (focus + checked)
-.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:focus-visible):where(:checked) ~ :is(.#{$check}__label, .#{$radio}__label) {
+.#{$card}__selectable-actions .#{$check}__input:focus-visible:checked ~ .#{$check}__label,
+.#{$card}__selectable-actions .#{$radio}__input:focus-visible:checked ~ .#{$radio}__label {
   --#{$card}--BorderColor: var(--#{$card}--m-selectable--m-selected--focus--BorderColor);
   --#{$card}--BorderWidth: var(--#{$card}--m-selectable--m-selected--focus--BorderWidth);
 }
 
 // Disabled card
-.#{$card}__selectable-actions :is(.#{$check}__input, .#{$radio}__input):where(:disabled) ~ :is(.#{$check}__label, .#{$radio}__label),
+.#{$card}__selectable-actions .#{$check}__input:disabled ~ .#{$check}__label,
+.#{$card}__selectable-actions .#{$radio}__input:disabled ~ .#{$radio}__label,
 .#{$card}.pf-m-disabled {
   --#{$card}__title-text--Color: var(--#{$card}--m-selectable--m-disabled__title-text--Color);
   --#{$card}__body--Color: var(--#{$card}--m-selectable--m-disabled__body--Color);
