--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -144,7 +144,7 @@
     border-radius: var(--#{$form-control}--before--BorderRadius);
   }
 
-  > :is(input, select, textarea) {
+  > input, select, textarea {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     padding-block-start: var(--#{$form-control}--PaddingBlockStart);
@@ -170,7 +170,7 @@
     color: var(--#{$form-control}--m-placeholder--Color); // TODO update to set --#{$form-control}--Color in breaking change - also look for any other place to do that in this component
   }
 
-  > :is(input, select) {
+  > input, select {
     text-overflow: ellipsis;
   }
 
