--- a/src/patternfly/components/Menu/examples/Menu.css
+++ b/src/patternfly/components/Menu/examples/Menu.css
@@ -9,11 +9,13 @@
   justify-content: flex-end;
 }
 
-:is([id="ws-core-c-menu-drilldown-with-breadcrumbs---level-3"], [id="ws-core-c-menu-drilldown-with-breadcrumbs---level-4"]) {
+[id="ws-core-c-menu-drilldown-with-breadcrumbs---level-3"],
+[id="ws-core-c-menu-drilldown-with-breadcrumbs---level-4"] {
   position: relative;
 }
 
-:is([id="ws-core-c-menu-drilldown-with-breadcrumbs---level-3"], [id="ws-core-c-menu-drilldown-with-breadcrumbs---level-4"]) .pf-v6-c-breadcrumb__dropdown .pf-v6-c-menu {
+[id="ws-core-c-menu-drilldown-with-breadcrumbs---level-3"] .pf-v6-c-breadcrumb__dropdown .pf-v6-c-menu,
+[id="ws-core-c-menu-drilldown-with-breadcrumbs---level-4"] .pf-v6-c-breadcrumb__dropdown .pf-v6-c-menu {
   position: absolute;
 }
 
