fix(global-selectors): fix * global selectors

--- a/src/patternfly/base/normalize.scss
+++ b/src/patternfly/base/normalize.scss
@@ -59,10 +59,12 @@
     iframe,
     object,
     audio,
-    video
+    video,
+    svg
   ) {
     max-width: 100%;
     height: auto;
+    max-height: 100%;
   }
 
   :where(iframe) {
