--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -15,7 +15,7 @@
   --#{$text-input-group}--m-hover--m-success--BorderColor: var(--pf-t--global--border--color--status--success--hover);
   --#{$text-input-group}--m-hover--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--hover);
   --#{$text-input-group}--m-hover--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--hover);
-  
+
 
   // Main
   --#{$text-input-group}__main--first-child--not--text-input--MarginInlineStart: calc(var(--pf-t--global--spacer--control--horizontal--plain) / 2);
@@ -63,8 +63,8 @@
   --#{$text-input-group}__icon--TranslateY: -50%;
 
   // Utilities
-  --#{$text-input-group}__utilities--child--MarginInlineStart: var(--pf-t--global--spacer--xs);
-  
+  --#{$text-input-group}__utilities--ColumnGap: var(--pf-t--global--spacer--xs);
+
   // input disabled style
   --#{$text-input-group}--m-disabled--Color: var(--pf-t--global--text--color--on-disabled);
   --#{$text-input-group}--m-disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
@@ -109,27 +109,27 @@
 
     &::before {
       border: 0;
-    }    
+    }
   }
 
   &.pf-m-success {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-success--BorderColor);
     --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-success--BorderColor);
-    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-success__icon--m-status--Color);  
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-success__icon--m-status--Color);
   }
 
   &.pf-m-warning {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-warning--BorderColor);
     --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-warning--BorderColor);
-    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-warning__icon--m-status--Color);  
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-warning__icon--m-status--Color);
   }
 
   &.pf-m-error {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-error--BorderColor);
     --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover--m-error--BorderColor);
-    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);  
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);
   }
-  
+
   &:hover {
     --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
   }
@@ -150,7 +150,7 @@
   flex-wrap: wrap;
   gap: var(--#{$text-input-group}__main--RowGap) var(--#{$text-input-group}__main--ColumnGap);
   min-width: 0;
-  
+
   &.pf-m-icon {
     --#{$text-input-group}__text--Position: relative;
     --#{$text-input-group}__text-input--PaddingInlineStart: var(--#{$text-input-group}__main--m-icon__text-input--PaddingInlineStart);
@@ -226,13 +226,8 @@
 // TODO: update to use gap
 .#{$text-input-group}__utilities {
   display: flex;
+  column-gap: var(--#{$text-input-group}__utilities--ColumnGap);
   align-items: center;
-  margin-inline-start: var(--#{$text-input-group}__utilities--MarginInlineStart);
-  margin-inline-end: var(--#{$text-input-group}__utilities--MarginInlineEnd);
-
-  > * + * {
-    margin-inline-start: var(--#{$text-input-group}__utilities--child--MarginInlineStart);
-  }
 }
 
 .#{$text-input-group}__group {
