--- a/src/patternfly/components/Table/table-tr.hbs
+++ b/src/patternfly/components/Table/table-tr.hbs
@@ -5,49 +5,28 @@
   {{#if table-tr--details--IsExpanded}} pf-m-tree-view-details-expanded{{/if}}
   {{#if table-tr--IsClickable}} pf-m-clickable{{/if}}
   {{#if table-tr--IsSelected}} pf-m-selected{{/if}}
-  {{#if table-tr--IsBorderRow}} pf-m-border-row{{/if}}
   {{#if table-tr--HasNoInset}} pf-m-no-inset{{/if}}
   {{#if table-tr--modifier}} {{table-tr--modifier}}{{/if}}"
-  {{#unless (concat table-tr--HasNoPosinset table--HasNoPosinset)}}
-    {{#if table--IsTree-view}}
-      aria-level="{{table--IsTree-view--level}}"
-      aria-setsize="{{table--IsTree-view--setsize}}"
-      aria-posinset="{{table--IsTree-view--posinset}}"
+  {{#if table--IsTree-view}}
+    {{#unless (concat table-tr--HasNoPosinset table--HasNoPosinset)}}
+      aria-level="{{ternary table--IsTree-view--level table--IsTree-view--level '1'}}"
+      aria-setsize="{{ternary table--IsTree-view--setsize table--IsTree-view--setsize '1'}}"
+      aria-posinset="{{ternary table--IsTree-view--posinset table--IsTree-view--posinset '1'}}"
 
       {{!-- if leaf and not expanded, apply hidden --}}
       {{#if table-tr--tree--IsLeaf}}
         tabindex="-1"
       {{else}}
         tabindex="0"
-        {{#if table-tr--IsExpanded}}
-          aria-expanded="true"
-        {{else}}
-          aria-expanded="false"
-        {{/if}}
+        aria-expanded="{{ternary table-tr--IsExpanded 'true' 'false'}}"
       {{/if}}
-      {{#if table-tr--IsHidden}}
-        hidden
-      {{/if}}
-    {{/if}}
-  {{/unless}}
-  {{#unless table-tr--IsBorderRow}}
-    {{#if table--IsGrid}}
-      role="row"
-    {{/if}}
-  {{/unless}}
-  {{#if table-tr--IsClickable}}
-    tabindex="0"
+      {{ternary table-tr--IsHidden 'hidden' null}}
+    {{/unless}}
   {{/if}}
-  {{#if table-tr--IsBorderRow}}
-    aria-hidden="true"
-  {{/if}}
+  {{ternary table--IsGrid 'role="row"'}}
+  {{ternary table-tr--IsClickable 'tabindex="0"'}}
   {{#if table-tr--attribute}}
     {{{table-tr--attribute}}}
   {{/if}}>
-  {{#if table-tr--IsBorderRow}}
-    {{!-- TODO: abstract the border row --}}
-    {{> table-cell-empty table-td--attribute=(concat 'colspan="' table-tr--colspan '"')}}
-  {{else}}
-    {{> @partial-block}}
-  {{/if}}
+  {{> @partial-block}}
 </tr>
